--- a/index.html
+++ b/index.html
@@ -253,6 +253,9 @@ init2();
 <div id='vphistory'></div>
 
 <div id="codearea" style="margin-bottom:15px;margin-top:5px"></div>
+		<div>
+			<iframe src="https://minnit.chat/rooms?embed&nickname=" style=""></iframe>
+		</div>
 
 <!-- Put this script tag to the <head> of your page -->
 <script type="text/javascript" src="https://vk.com/js/api/openapi.js?162"></script>
