--- a/index.html
+++ b/index.html
@@ -253,9 +253,8 @@ init2();
 <div id='vphistory'></div>
 
 <div id="codearea" style="margin-bottom:15px;margin-top:5px"></div>
-		<div>
-			<iframe src="https://minnit.chat/rooms?embed&nickname=" style=""></iframe>
-		</div>
+<iframe src="https://minnit.chat/rooms?embed&nickname=" style="border:none;width:100%;height:500px;" allowTransparency="true"></iframe>
+
 
 <!-- Put this script tag to the <head> of your page -->
 <script type="text/javascript" src="https://vk.com/js/api/openapi.js?162"></script>
