--- a/index.html
+++ b/index.html
@@ -1,105 +1,114 @@
+<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="theme-color" content="#ffffff">
+<link rel="icon" type="image/png" href="https://avatars.mds.yandex.net/get-dialogs/998463/bb8671ec69da2698c9dd/orig">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+<meta name="apple-mobile-web-app-capable" content="yes">
+<title>Секретный Чат Гача Лайф</title>
+<meta name="description" content="Играй в Gacha Life на компьютере и создавай собственных персонажей и ... Исследуй мир Gacha Life, посети ранее невиданные достопримечательности и встречай...">
+<meta name="keywords" content="гача лайф бесплатно играть, гача лайф играть, гача лайф играть онлайн, игра гача лайф играть онлайн, аниме гача лайф, гача лайф игра скачать, gacha life это">		
+
 	
-	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-148576480-1"></script>
 <script>
-     (adsbygoogle = window.adsbygoogle || []).push({
-          google_ad_client: "ca-pub-1624796608287605",
-          enable_page_level_ads: true
-     });
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-148576480-1'); 
 </script>
+<meta name="yandex-verification" content="eff88794e0dc623f" />
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
+   ym(55707982, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/55707982" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+	
+<style type="text/css">
+        .btn {
+            text-transform: initial !important;
+        }
+
+@media (max-width: 1990px) {
   
-
-
-<style>
-*{
-	font-size:14px;
-    font-family: Arial, Helvetica, sans-serif; /*Trebuchet MS, Tahoma, Verdana*/
+  a.navbar-brand {
+        display:none;
+  }
+  
+  a.navbar-brand {
+    position: absolute;
+    display: block;
+    transform: translate(-50%);
+    left: 50%;
+    top: 10px;
+  }
+    
+  li.nav-item {
+    text-align: center;
+  }
 }
-body{
-	/*background: #e3e3e3;*/
-}
-/*#maintable{
-	background-color: white;
-}*/
-.divopt{
-	/*-webkit-box-shadow: 0 0 10px #999;
-	-moz-box-shadow: 0 0 10px #999;
-	box-shadow: 0 0 10px #999;
-	border: 1px solid transparent;*/	
-}
-A:link    {color:#0860A8;text-decoration:none;}
-A:visited {color:#0860A8;text-decoration:none;}
-A:active  {color:#0860A8;text-decoration:underline;} 
-A:hover  {color:#0860A8;text-decoration:underline;}
-.head1{
-	font-size:19px;
-	font-weight:bold;
-}
-.head2{
-	font-size:16px;
-	font-weight:bold;
-	color:green;
-}
-.headdesc{
-	/*font-weight:bold;*/
-	color:green;
-}
-.nav{
-	font-size:18px;
-	margin-right:3px;
-}
-.newsmenu{
-	font-size:16px;
-}
-a.newsmenu:link{text-decoration:underline;}
-a.newsmenu:visited{text-decoration:underline;}
-a.newsmenu:active{text-decoration:underline;}
-a.newsmenu:hover{text-decoration:underline;}
-</style>
-
-<script src="js/common.js" type="text/javascript"></script>
-<script>
-var gadb=false;
-function setstorage(name,value){
-	if (window.localStorage){
-		localStorage[name]=value+''; 
-	}else{
-		//setCookie(name, value, 1000*60*60*24*365*10); 
-	}
-}
-function getstorage(name){
-	var s;
-	if (window.localStorage){
-		s=localStorage[name];
-	}else{
-		//s=getCookie(name);
-	}
-	return s;
-}
-</script>
-
-<script>
-window.URL=window.URL || window.webkitURL;
-function init(){
-	setCookie("c_last_kind","Drive_Game");
-}
-</script>
-
+    </style>
+<link href="/css/main.css?mid=558" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css"  crossorigin="anonymous" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.bundle.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" crossorigin="anonymous">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,100,300,700" type="text/css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,300,500,600" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-"></script>
 </head>
 <body>
+<div id="navbar-placeholder"></div>
+<nav id="minnit-navbar-nav" class="navbar navbar-expand-md navbar-light bg-faded minnitnavbar ">
+<div class="">
+<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+<span class="navbar-toggler-icon"></span>
+</button>
+<a class="navbar-brand" href="#">Секретный Чат Гача Лайф</a>
+<div class="collapse navbar-collapse" id="navbarNavDropdown">
+<ul class="navbar-nav">
+<a href="/"><span class="minnitinlinelogo"></span></a>
+<li class="nav-item" id="home_navbar_link">
+<a class="nav-link" href="/">Главная</a>
+</li>
+<li class="nav-item" id="register_navbar_link"><a class="nav-link" href="/tur1.html" target="_blank"><span data-localize="signup">Играть&nbsp;онлайн!</span></a></li>
+</ul>
+</div>
+</div>
+</nav>
+
+<style>
+body{
+	text-align:center;
+}
+img {
+    max-width: 100%;
+    height: auto;
+}
+</style>
+
 <iframe src="https://minnit.chat/rooms?embed&nickname=" style="border:none;width:100%;height:500px;" allowTransparency="true"></iframe>
+	
+	
+	
+	
 
-<table align=center>
-<tr><td height=5>
-<tr><td align=center>
-	<a  style="color:#aa00ff"><span style="font-size:30px;font-family:Verdana, Arial">Поздравляем! Вы прошли 1 тур, заходите почаще, 2 тур будет ещё сложнее, пишите в комментариях, как вам челленджи?</span></a>
-<tr><td height=9>
-</table>
 
-<table id="maintable" width=770 align=center class="divopt" style="padding:7px 12px 7px 12px;border:0px solid black;">
+<table id="maintable" width=auto align=center class="divopt" style="padding:7px 12px 7px 12px;border:0px solid black;">
 <!--background: white;-webkit-box-shadow: 0 0 10px #999;	-moz-box-shadow: 0 0 10px #999; box-shadow: 0 0 10px #999;//-->
 
 
@@ -107,15 +116,17 @@ function init(){
 
 <tr><td align=center>
 <div style="margin-top:2px">
-<script type="text/javascript">
-google_ad_client = "ca-pub-1624796608287605";
-google_ad_slot = "8XXXXX1";
-google_ad_width = 728;
-google_ad_height = 90;
-</script>
-<script type="text/javascript"
-src="//pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+<style type="text/css">
+.adslot_1 { display:inline-block; width: 320px; height: 50px; }
+@media (max-width: 400px) { .adslot_1 { display: none; } }
+@media (min-width:500px) { .adslot_1 { width: 468px; height: 60px; } }
+@media (min-width:800px) { .adslot_1 { width: 728px; height: 90px; } }
+</style>
+<ins class="adsbygoogle adslot_1"
+   data-ad-client="ca-pub-1234"
+   data-ad-slot="5678"></ins>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>(adsbygoogle = window.adsbygoogle || []).push({});</script> 
 
 
 <tr><td align=center>
@@ -241,44 +252,34 @@ init2();
 
 
 <table style="white-space:nowrap"><tr>
-<td>Ширина<td><input type="range" id="size_width" min=100 max=900 step="1" value="540" style="width:150px;padding:0px;" onchange="size_width_onchange(this)">
-<td><input type=number id="size_width_n" style="width:65px" min=100 max=900 value="540" onchange="size_width_n_onchange(this)">
+<td>Ш<td><input type="range" id="size_width" min=100 max=900 step="1" value="540" style="width:40px;padding:0px;" onchange="size_width_onchange(this)">
+<td><input type=number id="size_width_n" style="width:45px" min=100 max=900 value="540" onchange="size_width_n_onchange(this)">
 <td>
-<td>Высота<td><input type="range" id="size_height" min=100 max=900 step="1" value="280" style="width:150px;padding:0px;" onchange="size_width_onchange(this)">
-<td><input type=number id="size_height_n" style="width:65px" min=100 max=900 value="280" onchange="size_width_n_onchange(this)">
-<td><button id="btn_save" disabled=true onclick='proc_save()' style="font-size:13px" title="Save and keep this game's width, height">Save Size</button>
+<td>В<td><input type="range" id="size_height" min=100 max=900 step="1" value="280" style="width:40px;padding:0px;" onchange="size_width_onchange(this)">
+<td><input type=number id="size_height_n" style="width:45px" min=100 max=900 value="280" onchange="size_width_n_onchange(this)">
+<td><button id="btn_save" disabled=true onclick='proc_save()' style="font-size:13px" title="Save and keep this game's width, height">S</button>
 <td>
-<td><button id="btn_refresh" disabled=true onclick='proc_refresh()' style="font-size:13px">Refresh</button>
+<td><button id="btn_refresh" disabled=true onclick='proc_refresh()' style="font-size:13px">R</button>
 <td><button id="btn_close" disabled=true onclick='proc_close()' style="font-size:13px">Close</button>
 </table>
 <div id='vphistory'></div>
 
 <div id="codearea" style="margin-bottom:15px;margin-top:5px"></div>
 
-
-<!-- Put this script tag to the <head> of your page -->
-<script type="text/javascript" src="https://vk.com/js/api/openapi.js?162"></script>
-
-<script type="text/javascript">
-  VK.init({apiId: 6943911, onlyWidgets: true});
-</script>
-
-<!-- Put this div tag to the place, where the Comments block will be -->
-<div id="vk_comments"></div>
-<script type="text/javascript">
-VK.Widgets.Comments("vk_comments", {limit: 5, width: "760", attach: "*"});
-</script>
+<iframe src="https://minnit.chat/rooms?embed&nickname=" style="border:none;width:100%;height:500px;" allowTransparency="true"></iframe>
 
 <tr><td align=center>
-<script type="text/javascript">
-google_ad_client = "ca-pub-1624796608287605";
-google_ad_slot = "8XXXXX1";
-google_ad_width = 728;
-google_ad_height = 90;
-</script>
-<script type="text/javascript"
-src="//pagead2.googlesyndication.com/pagead/show_ads.js" onerror="gadb=true;">
-</script>
+<style type="text/css">
+.adslot_1 { display:inline-block; width: 320px; height: 50px; }
+@media (max-width: 400px) { .adslot_1 { display: none; } }
+@media (min-width:500px) { .adslot_1 { width: 468px; height: 60px; } }
+@media (min-width:800px) { .adslot_1 { width: 728px; height: 90px; } }
+</style>
+<ins class="adsbygoogle adslot_1"
+   data-ad-client="ca-pub-1234"
+   data-ad-slot="5678"></ins>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
 <script>
 function size_width_onchange(f,nosize){
@@ -996,7 +997,36 @@ a.bottomlink:hover{text-decoration:underline;}
 var a=_getid("bottomtable");
 if(a) a.setAttribute('style','margin-top:-7px');
 </script>
+	
+	
+	
+	
+<div>
+<p>Челлендж 2 преврати себя в Аниме и отправь в Чат: <a href="https://selfie2anime.com" target="_blank">Селфи в Аниме!</a></p>
+<img src="/assets/img/1.jpg">
+</div>
 
-<br>
+	<div id="vk_widget"></div>
+<script type="text/javascript" src="//vk.com/js/api/openapi.js?116"></script>
+<script>
+    function VK_Widget_Init(){
+        document.getElementById('vk_widget').innerHTML = '<div id="vk_groups"></div>';
+        VK.Widgets.Group("vk_groups", {mode: 0, width: "auto", height: "241", color1: "FFFFFF", color2: "000000", color3: "5181B8"}, 72812978);
+    };
+    window.addEventListener('load', VK_Widget_Init, false);
+    window.addEventListener('resize', VK_Widget_Init, false);
+</script>
+        <!-- Put this script tag to the <head> of your page -->
+<script type="text/javascript" src="https://vk.com/js/api/openapi.js?162"></script>
+
+<script type="text/javascript">
+  VK.init({apiId: 6943911, onlyWidgets: true});
+</script>
+	 
+<div id="radiobells_container"><a href="https://www.radiobells.com/" rel="nofollow" id="RP_link">Онлайн радио</a> #radiobells_script_hash</div><link href="https://www.radiobells.com/script/style.css" type="text/css" rel="stylesheet" /><script type="text/javascript">var rad_backcolor="#5181B8"; var rad_logo = "black"; var rad_autoplay = true; var rad_width = "responsive"; var rad_width_px = 330;var rad_stations =[['http://air.radiorecord.ru:805/rmx_320','Record Remix','recordremix'],['http://ic7.101.ru:8000/a99?','Радио Energy','nrj'],['http://emgregion.hostingradio.ru:8064/moscow.europaplus.mp3','Европа плюс','europaplus'],['http://strm112.1.fm/top40_mobile_mp3','1 FM Absolute TOP 40','1fmabsolutetop40'],['https://dfm.hostingradio.ru/dfm96.aacp','DFM','dfm'],['http://air.radiorecord.ru:805/rr_320','Радио Рекорд','radiorecord'],['http://radio.dline-media.com/ppr128.mp3','Пионер FM','pionerfm'],['https://rusradio.hostingradio.ru/rusradio96.aacp','Русское радио','russradio'],['http://listen.megahit.online/megamp128','Радио Мегахит','megahitonline'],['http://air.radiorecord.ru:805/gold_320','Record Gold','recordgold']];</script><script type="text/javascript" src="https://www.radiobells.com/script/v2_1.js" charset="UTF-8"></script>
+	
+<div class="footer-copyright py-3 text-center">
+© 2020 Все права защищены.
+</div>
 </body>
 </html>
